--- a/CV.html
+++ b/CV.html
@@ -39,26 +39,26 @@
                     <div class="bottom-border bottom-border-left" style="margin-bottom: 30px;"></div>
 
                     <div>
-                        <div class="language">
+                        <div class="point-items">
                             Russian
-                            <div class="point painted-point"></div>
-                            <div class="point painted-point"></div>
-                            <div class="point painted-point"></div>
-                            <div class="point painted-point"></div>
+                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="left-side-point left-side-painted-point "></div>
                         </div>
-                        <div class="language">
+                        <div class="point-items">
                             English
-                            <div class="point painted-point"></div>
-                            <div class="point painted-point"></div>
-                            <div class="point painted-point"></div>
-                            <div class="point non-painted-point"></div>
+                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="left-side-point left-side-non-painted-point"></div>
                         </div>
-                        <div class="language">
+                        <div class="point-items">
                             Swahili
-                            <div class="point non-painted-point"></div>
-                            <div class="point non-painted-point"></div>
-                            <div class="point non-painted-point"></div>
-                            <div class="point non-painted-point"></div>
+                            <div class="left-side-point left-side-non-painted-point"></div>
+                            <div class="left-side-point left-side-non-painted-point"></div>
+                            <div class="left-side-point left-side-non-painted-point"></div>
+                            <div class="left-side-point left-side-non-painted-point"></div>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,68 @@
                     <span style="font-size: 20px; font-weight: lighter; margin-bottom: 20px;">Junior frontend developer</span>
                     <h2>Profile</h2>
                     <div class="bottom-border bottom-border-right"></div>
-                    <span style="font-size: 12px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eaque atque porro recusandae numquam veniam accusamus voluptatibus quasi cupiditate reprehenderit! Dolore natus aliquid amet itaque veniam nemo deleniti, corrupti minus?</span>
+                    <span style="font-size: 12px; margin-bottom: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eaque atque porro recusandae numquam veniam accusamus voluptatibus quasi cupiditate reprehenderit! Dolore natus aliquid amet itaque veniam nemo deleniti, corrupti minus?</span>
+                    <h2>Experience</h2>
+                    <div class="bottom-border bottom-border-right"></div>
+                        <div class="experience-grid">
+                            <div class="left-experience-item">2014 — 2016<br>АО "Хабаровская энерготехнологическая компания"</div>
+                            <div class="right-experience-item">
+                                <b>Системный администратор</b><br>
+                                Пинал Active Directory и пользователей
+                            </div>
+                            <div class="left-experience-item">2016 — 2017<br>ООО "Проектный институт "Хабаровскэнергопроект"</div>
+                            <div class="right-experience-item">
+                                <b>Системный администратор</b><br>
+                                Пинал Active Directory, пользователей и хуи
+                            </div>
+                            <div class="left-experience-item">2017 — 2022<br>"Леруа Мерлен"</div>
+                            <div class="right-experience-item">
+                                <b>Специалист техподдержки</b><br>
+                                Пинал все, что пинается, обслуживал компы и открывал магазины в качестве менеджера по ИТ
+                            </div>
+                        </div>
+                    <h2>Skills</h2>
+                    <div class="bottom-border bottom-border-right"></div>
+                    <div class="skills-grid">
+                        <div class="skills-item">
+                            <div class="point-items">
+                                <span class="skills-name-width">Swift</span>
+                                <!-- Swift -->
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-non-painted-point"></div>
+                            </div>
+                        </div>
+                        <div class="skills-item">
+                            <div class="point-items">
+                                <span class="skills-name-width">JS, HTML, CSS</span>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-non-painted-point"></div>
+                                <div class="right-side-point right-side-non-painted-point"></div>
+                                <div class="right-side-point right-side-non-painted-point"></div>
+                            </div>
+                        </div>
+                        <div class="skills-item">
+                            <div class="point-items">
+                                <span class="skills-name-width">System administrator</span>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-non-painted-point"></div>
+                            </div>
+                        </div>
+                        <div class="skills-item">
+                            <div class="point-items">
+                                <span class="skills-name-width">Пинать хуи</span>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                                <div class="right-side-point right-side-painted-point"></div>
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
                 
