--- a/CV.html
+++ b/CV.html
@@ -37,35 +37,34 @@
                         <h2>Language</h2>
                     </div>
                     <div class="bottom-border bottom-border-left" style="margin-bottom: 30px;"></div>
-
                     <div>
                         <div class="point-items">
                             Russian
-                            <div class="left-side-point left-side-painted-point "></div>
-                            <div class="left-side-point left-side-painted-point "></div>
-                            <div class="left-side-point left-side-painted-point "></div>
-                            <div class="left-side-point left-side-painted-point "></div>
+                            <div class="point left-side-painted-point "></div>
+                            <div class="point left-side-painted-point "></div>
+                            <div class="point left-side-painted-point "></div>
+                            <div class="point left-side-painted-point "></div>
                         </div>
                         <div class="point-items">
                             English
-                            <div class="left-side-point left-side-painted-point "></div>
-                            <div class="left-side-point left-side-painted-point "></div>
-                            <div class="left-side-point left-side-painted-point "></div>
-                            <div class="left-side-point left-side-non-painted-point"></div>
+                            <div class="point left-side-painted-point "></div>
+                            <div class="point left-side-painted-point "></div>
+                            <div class="point left-side-painted-point "></div>
+                            <div class="point left-side-non-painted-point"></div>
                         </div>
                         <div class="point-items">
                             Swahili
-                            <div class="left-side-point left-side-non-painted-point"></div>
-                            <div class="left-side-point left-side-non-painted-point"></div>
-                            <div class="left-side-point left-side-non-painted-point"></div>
-                            <div class="left-side-point left-side-non-painted-point"></div>
+                            <div class="point left-side-non-painted-point"></div>
+                            <div class="point left-side-non-painted-point"></div>
+                            <div class="point left-side-non-painted-point"></div>
+                            <div class="point left-side-non-painted-point"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="right-case">
                 <div class="right-case-content">
-                    <h1>Nikita<br> Shvets</h1>
+                    <h1>Nikita<br>Shvets</h1>
                     <span style="font-size: 20px; font-weight: lighter; margin-bottom: 20px;">Junior frontend developer</span>
                     <h2>Profile</h2>
                     <div class="bottom-border bottom-border-right"></div>
@@ -73,20 +72,20 @@
                     <h2>Experience</h2>
                     <div class="bottom-border bottom-border-right"></div>
                         <div class="experience-grid">
-                            <div class="left-experience-item">2014 — 2016<br>АО "Хабаровская энерготехнологическая компания"</div>
+                            <div class="left-experience-item">2014 — 2016<br>JSC Khabarovsk Energy Technology Company</div>
                             <div class="right-experience-item">
-                                <b>Системный администратор</b><br>
-                                Пинал Active Directory и пользователей
+                                <b>System Administrator</b><br>
+                                Kick Active Directory and users
                             </div>
-                            <div class="left-experience-item">2016 — 2017<br>ООО "Проектный институт "Хабаровскэнергопроект"</div>
+                            <div class="left-experience-item">2016 — 2017<br>Design Institute "Khabarovskenergoproekt" LLC</div>
                             <div class="right-experience-item">
-                                <b>Системный администратор</b><br>
-                                Пинал Active Directory, пользователей и хуи
+                                <b>System Administrator</b><br>
+                                Kick Active Directory, users and dicks
                             </div>
-                            <div class="left-experience-item">2017 — 2022<br>"Леруа Мерлен"</div>
+                            <div class="left-experience-item">2017 — 2022<br>"Leroy Merlin"</div>
                             <div class="right-experience-item">
-                                <b>Специалист техподдержки</b><br>
-                                Пинал все, что пинается, обслуживал компы и открывал магазины в качестве менеджера по ИТ
+                                <b>Support Specialist</b><br>
+                                Kicked everything that kicked, serviced computers and opened stores as an IT manager
                             </div>
                         </div>
                     <h2>Skills</h2>
@@ -95,49 +94,43 @@
                         <div class="skills-item">
                             <div class="point-items">
                                 <span class="skills-name-width">Swift</span>
-                                <!-- Swift -->
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-non-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-non-painted-point"></div>
+                                <div class="point right-side-non-painted-point"></div>
                             </div>
                         </div>
                         <div class="skills-item">
                             <div class="point-items">
                                 <span class="skills-name-width">JS, HTML, CSS</span>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-non-painted-point"></div>
-                                <div class="right-side-point right-side-non-painted-point"></div>
-                                <div class="right-side-point right-side-non-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-non-painted-point"></div>
+                                <div class="point right-side-non-painted-point"></div>
+                                <div class="point right-side-non-painted-point"></div>
                             </div>
                         </div>
                         <div class="skills-item">
                             <div class="point-items">
                                 <span class="skills-name-width">System administrator</span>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-non-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-non-painted-point"></div>
                             </div>
                         </div>
                         <div class="skills-item">
                             <div class="point-items">
-                                <span class="skills-name-width">Пинать хуи</span>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
-                                <div class="right-side-point right-side-painted-point"></div>
+                                <span class="skills-name-width">Kick dicks</span>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
+                                <div class="point right-side-painted-point"></div>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-                
-                
             </div>
         </div>
-
     </div>
 </body>
 </html>
